--- a/.build/styles/main.less
+++ b/.build/styles/main.less
@@ -60,7 +60,14 @@ body {
 }
 
 h1,h2 {
-  color: @highlight;
+  color: @highlight;  
+}
+
+small {
+  margin-left:20px;
+  font-weight:400;
+  font-size:60%;
+  color:gray;
 }
 
 h2 { 
@@ -69,6 +76,7 @@ h2 {
 
 a {
   color: @link;
+  font-weight: 400;
   text-decoration: none;
   &:hover {
     text-decoration: underline;
