--- a/styles/main.less
+++ b/styles/main.less
@@ -19,10 +19,11 @@ body {
   margin-top:0px;
   height: 70px;
   //background: linear-gradient(@base-color 90%,@base-gray 100%);
-  background-color: @base-color;
+  color: @base-color;
   z-index:2;
   //border-bottom: 1px solid #555;
   box-shadow: 0px 0px 6px #333;
+background: black;
 }
 
 .title {
