--- a/assets/css/screen.css?v=053c1aa387.css
+++ b/assets/css/screen.css?v=053c1aa387.css
@@ -107,11 +107,11 @@ table { border-collapse: collapse; border-spacing: 0; }
 /* Import the font file with the icons in it */
 @font-face {
     font-family: "casper-icons";
-    src:url("../fonts/casper-icons.eot?v=1");
-    src:url("../fonts/casper-icons.eot?v=1") format("embedded-opentype"),
-        url("../fonts/casper-icons.woff?v=1") format("woff"),
-        url("../fonts/casper-icons.ttf?v=1") format("truetype"),
-        url("../fonts/casper-icons.svg?v=1") format("svg");
+    src:url("../fonts/casper-icons.eot%3Fv=1");
+    src:url("../fonts/casper-icons.eot%3Fv=1") format("embedded-opentype"),
+        url("../fonts/casper-icons.woff%3Fv=1") format("woff"),
+        url("../fonts/casper-icons.ttf%3Fv=1") format("truetype"),
+        url("../fonts/casper-icons.svg%3Fv=1") format("svg");
     font-weight: normal;
     font-style: normal;
 }
